Consolidate CORS settings into SecurityConfig
Removes the separate `CorsConfig` class and centralizes CORS configuration in `SecurityConfig`. The new setup no longer depends on `app.frontend.url` and explicitly allows production domains plus localhost, adds `PATCH` to allowed methods, and broadens allowed headers for frontend/API compatibility.